fix: finalize v0.1.3 multilang interfaces