@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.Locale;
 
@@ -22,7 +23,7 @@ final class NativeLoader {
 
         String explicitPath = System.getProperty("finkit.native.path", "").trim();
         if (!explicitPath.isEmpty()) {
-            System.load(Path.of(explicitPath).toAbsolutePath().toString());
+            System.load(Paths.get(explicitPath).toAbsolutePath().toString());
             loaded = true;
             return;
         }
